# meetups

./: .gitignore  LICENSE  README.md
01-2016/: README.md
01-2016/concorrencia-em-haskell/ghci-threads-mvars/: app.js  package.json
09-2016/programas-como-linguagens/: programas-como-linguagens.key
09-2016/programas-como-linguagens/calculadora/: ChangeLog.md  Makefile  calculadora-simple  calculadora-state  calculadora.cabal
09-2016/programas-como-linguagens/calculadora/src/: Main.hs  Simple.hs  SimpleState.hs
09-2016/programas-como-linguagens/haskell-haxl-example/: BatchingExample.hs  CachingExample.hs  ChangeLog.md  haskell-haxl-example.cabal  package.yaml  stack.yaml
09-2016/programas-como-linguagens/haskell-web-repl/: Makefile  backend.hs  haskell-web-repl.cabal  package.json  package.yaml  tmp  tmp.hs
09-2016/programas-como-linguagens/haskell-web-repl/config/: webpack.config.dev.js
09-2016/programas-como-linguagens/haskell-web-repl/src/: App.css  App.js
09-2016/programas-como-linguagens/javascript-dataloader-example/: batch-example.js  cache-example.js  index.js  package.json
code/: README.md
code/ghci-api/: README.md  ghci-api.cabal
code/ghci-api/src/: Main.hs
concorrencia-em-haskell/ghci-sprint/: index.html
concorrencia-em-haskell/ghci-threads-mvars/: SimpleHttpClient.hs
concorrencia-em-haskell/ghci-threads-mvars/client/: index.js
ghci-api/: app.js  index.html  package.json
ghci-api/client/: index.js
ghci-sprint/: app.js
ghci-sprint/client/: index.js
ghci-threads-mvars/: ConcurrentWatched.hs  index.html
