name:                calculadora
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              yamadapc
maintainer:          tacla.yamada@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable calculadora-simple
  main-is:             Simple.hs
  build-depends:       base >=4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded

executable calculadora-state
  main-is:             SimpleState.hs
  build-depends:       base >=4
                     , containers
                     , mtl
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded +RTS -N -RTS
